objects/Product_Data__c.object
<CustomObject>
    <fields>
        <fullName>Product_Weight_Gms__c</fullName>
        <label>Product Weight(Gms)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ram_Machine_Clamp_Daylight_mm__c</fullName>
        <label>Ram Machine Clamp Daylight(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rear_Suck_Back_mm__c</fullName>
        <label>Rear Suck Back(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refilling_Profile__c</fullName>
        <label>Refilling Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Runner_Sprue_Weight__c</fullName>
        <label>Runner/Sprue Weight(Gms)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screw_Diameter__c</fullName>
        <formula>Asset__r.ScrewDiameter__c</formula>
        <label>Screw Diameter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screw_RPM_1__c</fullName>
        <label>Screw RPM - 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screw_RPM_2__c</fullName>
        <label>Screw RPM - 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screw_RPM_3__c</fullName>
        <label>Screw RPM - 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screw_RPM__c</fullName>
        <label>Screw RPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screw_Type__c</fullName>
        <label>Screw Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Barrier</fullName>
                </value>
                <value>
                    <fullName>Barrier+Mixhead</fullName>
                </value>
                <value>
                    <fullName>GP+Mixhead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shot_Size_mm__c</fullName>
        <label>Shot Size(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slow_Open_Sec__c</fullName>
        <label>Slow Open(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprue_Break_Delay_Time_Sec__c</fullName>
        <label>Sprue Break Delay Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprue_Break_Enable__c</fullName>
        <label>Sprue Break Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprue_Break_Mode__c</fullName>
        <label>Sprue Break Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprue_Break_On_Time_Sec__c</fullName>
        <label>Sprue Break On Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tonnage_Sec__c</fullName>
        <label>Tonnage(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tonnage_Set__c</fullName>
        <label>Tonnage Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cycle_Time_Sec__c</fullName>
        <label>Total Cycle Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_Weight_Gms__c</fullName>
        <label>Total Product Weight(Gms)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Refill_Time_Sec__c</fullName>
        <label>Total Refill Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Mode__c</fullName>
        <label>Transfer Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Position_mm__c</fullName>
        <label>Transfer Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Pressure_bar__c</fullName>
        <label>Transfer Pressure(bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Time_Sec__c</fullName>
        <label>Transfer Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_1_Temp__c</fullName>
        <label>Zone - 1 Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_2_Temp__c</fullName>
        <label>Zone - 2 Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone_3_Temp__c</fullName>
        <label>Zone - 3 Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Data</label>
    <listViews>
        <fullName>All_Product_Data</fullName>
        <columns>PDS_Name__c</columns>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Account__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Data</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>